src/components/Gallery/gallery.css
.gallery-background {
    position: relative;
    width: 100%;
    height: 100%;
    border-radius: 3.5rem;
    overflow: hidden;
}

.gallery-background img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.gallery-page4 {
    position: relative;
    height: 115vh;
    padding: 0.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    background-color: #000000;
    transition: background-color 0.3s ease;
}

.gallery-page4 .gallery-slider {
    width: 100%;
    overflow: hidden;
    height: auto;
}

.gallery-slider .gallery-box {
    position: relative;
    min-width: calc(110rem * 5);
    height: 15rem;
    display: flex;
    gap: 2rem;
}

.gallery-slider .gallery-box h3 {
    font-size: 10rem;
    width: 110rem;
    white-space: nowrap;
    position: absolute;
    color: #f4efe7;
    font-weight: 600;
    left: 100%;
    animation: gallery-animate var(--time) linear infinite;
    animation-delay: calc((var(--time) / var(--quantity) * (var(--index) - 1)) - var(--time));
}

@keyframes gallery-animate {
    to {
        left: -110rem;
    }
}

.gallery-page4 .gallery-background {
    position: absolute;
    width: 40rem;
    height: 18rem;
    border-radius: 90px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.gallery-page4 .gallery-background img {
    transform: scale(1.3);
}

/* text animation */
.gallery-topText,
.gallery-bottomText {
    position: absolute;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #f4efe7;
    font-weight: 600;
    display: flex;
    justify-content: space-between;
    padding: 0 2rem;
}

.gallery-bottomText {
    top: 92%;
}

.gallery-topText h4,
.gallery-topText h3,
.gallery-bottomText h4,
.gallery-bottomText h3 {
    position: relative;
    z-index: 10;
}

.gallery-topText h4 {
    font-size: 5rem;
    font-weight: 400;
}

.gallery-topText h3 {
    font-size: 3rem;
}

.gallery-bottomText h3 {
    width: 100%;
    font-size: 0.8rem;
    margin-left: 1rem;
}

/* text animation end */

.gallery-page4 .gallery-background2 {
    position: absolute;
    width: calc(100vw - 1rem);
    height: calc(100vh - 1rem);
    border-radius: 3.5rem;
    top: 50%;
    left: 50%;
    transform: translate(-50%, 100%);
    overflow: hidden;
}

.gallery-background2 img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transform: scale(1.3);
}

